--- a/index_map.html
+++ b/index_map.html
@@ -2,6 +2,7 @@
     <head>
         <!--Index file with base table format + links to css and js files-->
         <script src="https://d3js.org/d3.v4.min.js"></script>
+        <!--<script src="d3.superformula.min.js"></script>-->
         <script src="//maps.google.com/maps/api/js?key=AIzaSyA4utTxvNgWCaBigDNMUNGkvzCstDgX2hQ"></script>
         <link rel="stylesheet" href="dv.css">
     </head>
@@ -17,13 +18,21 @@
                     <!--<input type="radio" id='group' name="search_option" value="group"><label for="group"> Group </label>&nbsp;&nbsp;-->
                 <!--</td>-->
             <!--</tr>-->
-            <tr> <td colspan='3' height="50"></td> </tr> <!--Row 2 - a break so there is a space between different rows-->
-            <tr> <!--Row 3 - charts - 4 columns, charts in individual  tables -->
+            <tr> <td colspan='3' height="20"></td> </tr> <!--Row 1 - a break so there is a space between different rows-->
+            <tr> <!--Row 2 - charts - 4 columns, charts in individual  tables -->
                 <!--list_title - dynamically created checkbox - see effective.js -->
                 <td class='chart_td'>
                     <table class='text_table'>
-                        <tr> <td id='list_title'> LOCATION </td> </tr>
-                        <tr> <td id='map_title'>  LOCATION </td> </tr>
+                        <tr> <td> <img src="bike.png" height="200" width="200"> </td> </tr>
+                        <tr> <td id='list_title'> Who Goes COGO? </td> </tr>
+                        <tr>
+                            <td>
+                                Temporary transportation services like CoGo Bike Share could serve as cost-effective alternatives to owning private
+                                <br> <br> transportation, though low-income individuals may have restricted access to them. We will locate the primary areas of operation for these services and contrast them with resident income data as well as other demographic data, with the purpose of learning if there is a correlation between demographic factors and access to this service, and to determine if they are geographically feasible options for residents of low-income neighborhoods.
+                            </td>
+                        </tr>
+                        <tr> <td height="100"></td> </tr>
+                        <tr> <td> Conclusion: </td> </tr>
                     </table>
                 </td>
                 <!--map td and title -->
