--- a/index.html
+++ b/index.html
@@ -4,50 +4,58 @@
         <script src="//maps.google.com/maps/api/js?key=AIzaSyA4utTxvNgWCaBigDNMUNGkvzCstDgX2hQ"></script>
         <link rel="stylesheet" href="style.css">
     </head>
+    <title> COGO Stations </title>
     <body>
-        <title> COGO Stations </title>
-        <table cellpadding="30">
-            <tr> <!-- Row 2: texts, map, and chart -->
-                <td width="50"></td> <!-- Column 1: blank -->
+        <table>
+            <tr><td height="20"></td></tr>
+            <tr> <!-- Row 1: texts, map, and chart -->
+                <td width="80"></td> <!-- Column 1: blank -->
                 <td class='chart_td'> <!-- Column 2: texts -->
-                    <table class="text_column">
-                        <tr> <td align="center"> <img src="img/bike.png" height="200" width="200"> </td> </tr>
-                        <tr> <td id="list_title1"> Who Goes </td> </tr>
-                        <tr> <td id="list_title2"> COGO? </td> </tr>
-                        <tr>
-                            <td>
-                                CoGo Bike Share allows thousands of Columbus
-                                citizens access to cheap, temporary transportation.
-                                <strong>But who is the service really for?</strong>
-                                Using data collected by the City of Columbus and
-                                CoGo, this visualization highlights 47 bike share
-                                stations in context with the people who live and
-                                work nearby.
-                            </td>
-                        </tr>
-                        <tr> <td height="80"></td> </tr>
-                        <tr> <td id="conclusion" height="240">
-                            <!--Conclusion: Income-->
-                            <!--<br>-->
-                            <!--<br> Based on neighborhood income data collected from-->
-                            <!--www.city-data.com, it appears that CoGo stations are-->
-                            <!--primarily placed to serve community that has annual-->
-                            <!--median household income lower than $80,000. CoGo bikes-->
-                            <!--in lower-income areas are less likely to be used-->
-                            <!--comparing to bikes in higher-income areas.-->
+                    <table id="text_column">
+                        <tr> <td align="center" id="bike"> <img src="img/bike.png" height="180" width="180"> </td> </tr>
+                        <tr> <td id="title1"> Who Goes </td> </tr>
+                        <tr> <td id="title2"> COGO? </td> </tr>
+                        <tr> <td id="overview">
+                            CoGo Bike Share allows thousands of Columbus citizens access to cheap, temporary
+                            transportation. <strong>But who is the service really for?</strong> Using data
+                            collected by the City of Columbus and CoGo, this visualization highlights 47 bike
+                            share stations in context with the people who live and work nearby.
+                        </td> </tr>
+                        <tr> <td height="50"></td></tr>
+                        <tr> <td id="conclusion"></td></tr>
                     </table>
                 </td>
-                <td width="40"></td> <!-- Column 3: blank -->
-                <td class='chart_td' width="600"> <!-- Column 4: map and chart -->
-                    <table>
+                <td width="80"></td> <!-- Column 3: blank -->
+                <td class='chart_td'> <!-- Column 4: map and chart -->
+                    <table id="char_column">
                         <tr> <td id='list_radio'></td> </tr>
-                        <tr> <td> <div id="map"></div> </td> </tr>
-                        <tr> <td> <div id="bar_chart"></div> </td> </tr>
+                        <tr>
+                            <td> <div id="map"></div> </td>
+                        </tr>
+                        <tr> <td id='list_radio2'>
+                            <input type='radio' id='scatter_plot' name='options2' value='scatter_plot' checked='checked'>
+                            <label class="tooltipO" for='scatter_plot'>
+                                Scatter Plot <span class="tooltipOText"> Tooltip text </span>
+                            </label>&nbsp;&nbsp;
+                            <input type='radio' id='bar' name='options2' value='bar' checked='checked'>
+                            <label class="tooltipO" for='bar'>
+                                Bar Chart <span class="tooltipOText"> Tooltip text </span>
+                            </label>&nbsp;&nbsp;
+                        </td> </tr>
+                        <tr> <td> <div id="chart"></div> </td> </tr>
+                        <!--<tr> <td> <div id="scatter"></div> </td> </tr>-->
                     </table>
                 </td>
                 <td width="80"></td> <!-- Column 5: blank -->
             </tr>
+            <tr>
+                <td width="80"></td>
+                <td colspan="3">hhh</td>
+                <td width="80"></td>
+            </tr>
+
         </table>
+
         <script src="map.js"></script>
     </body>
 </html>
