--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <td width="80"></td> <!-- Column 1: blank -->
                 <td class='chart_td'> <!-- Column 2: texts -->
                     <table id="text_column">
-                        <tr> <td align="center" id="bike"> <img src="img/bike.png" height="180" width="180"> </td> </tr>
+                        <tr> <td align="center" id="bike"> <img src="img/income_bike.png" height="180" width="180"> </td> </tr>
                         <tr> <td id="title1"> Who Goes </td> </tr>
                         <tr> <td id="title2"> COGO? </td> </tr>
                         <tr> <td id="overview">
@@ -33,13 +33,15 @@
                             <td> <div id="map"></div> </td>
                         </tr>
                         <tr> <td id='list_radio2'>
-                            <input type='radio' id='scatter_plot' name='options2' value='scatter_plot' checked='checked'>
-                            <label class="tooltipO" for='scatter_plot'>
-                                Scatter Plot <span class="tooltipOText"> Tooltip text </span>
-                            </label>&nbsp;&nbsp;
                             <input type='radio' id='bar' name='options2' value='bar' checked='checked'>
                             <label class="tooltipO" for='bar'>
-                                Bar Chart <span class="tooltipOText"> Tooltip text </span>
+                                Bar Chart
+                                <!--<span class="tooltipOText"> Tooltip text </span>-->
+                            </label>&nbsp;&nbsp;
+                            <input type='radio' id='scatter_plot' name='options2' value='scatter_plot'>
+                            <label class="tooltipO" for='scatter_plot'>
+                                Scatter Plot
+                                <!--<span class="tooltipOText"> Tooltip text </span>-->
                             </label>&nbsp;&nbsp;
                         </td> </tr>
                         <tr> <td> <div id="chart"></div> </td> </tr>
