--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     <a href="http://www.city-data.com/income/income-Columbus-Ohio.html"> City-data </a><br>
                     <a href="https://d3js.org/"> D3 </a><br>
                     <a href="https://ecomfe.github.io/echarts-doc/public/en/index.html"> ECharts </a><br>
+                    <a href="https://https://developers.google.com/maps/documentation/javascript/"> Google Maps API </a>
                 </div>
             </div>
         </footer>
